--- a/training /unet_msd_training/3d_unet_msd_train.ipynb
+++ b/training /unet_msd_training/3d_unet_msd_train.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNEJGeZMNHJ3BHTfker/eNG",
+      "authorship_tag": "ABX9TyMIoQbKLUw0Mts8WAHWatZl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -298,9 +298,12 @@
         "torch.backends.cuda.matmul.allow_tf32 = True\n",
         "torch.backends.cudnn.allow_tf32 = True\n",
         "\n",
-        "JSON_PATH = \"/content/drive/MyDrive/Task01_BrainTumour_extracted/Task01_BrainTumour/dataset.json\"   # path to your JSON\n",
+        "#JSON_PATH = \"/content/drive/MyDrive/Task01_BrainTumour_extracted/Task01_BrainTumour/dataset.json\"   # path to your JSON\n",
+        "JSON_PATH = \"/content/drive/MyDrive/3dunet_medsam2_drive/dataset_json/dataset.json\"   # path to your JSON\n",
         "# SAVE_DIR  = \"checkpoints_smp3d_b7\" # Original save directory\n",
-        "SAVE_DIR  = \"/content/drive/MyDrive/BrainTumor_Checkpoints\" # Save to Google Drive\n",
+        "#SAVE_DIR  = \"/content/drive/MyDrive/BrainTumor_Checkpoints\" # Save to Google Drive\n",
+        "SAVE_DIR  = \"/content/drive/MyDrive/3dunet_medsam2_drive/data_split_json/msd_task01\" # Save to Google Drive\n",
+        "\n",
         "os.makedirs(SAVE_DIR, exist_ok=True)\n",
         "\n",
         "SEED = 42\n",
