--- a/inference/msd/3d_unet_msd_inf.ipynb
+++ b/inference/msd/3d_unet_msd_inf.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPfl+YK/CtdP0OJ4kJIq+rC",
+      "authorship_tag": "ABX9TyM8Glza7Wr7ksBeLFkiyNi+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,8 +210,10 @@
         "# -------------------------\n",
         "# Paths / config\n",
         "# -------------------------\n",
-        "JSON_PATH = \"/content/drive/MyDrive/Task01_BrainTumour_extracted/Task01_BrainTumour/dataset.json\"\n",
-        "SAVE_DIR  = \"/content/drive/MyDrive/BrainTumor_Checkpoints\"   # same as training\n",
+        "#JSON_PATH = \"/content/drive/MyDrive/Task01_BrainTumour_extracted/Task01_BrainTumour/dataset.json\"\n",
+        "JSON_PATH = \"/content/drive/MyDrive/3dunet_medsam2_drive/dataset_json/dataset.json\"   # path to your JSON\n",
+        "#SAVE_DIR  = \"/content/drive/MyDrive/BrainTumor_Checkpoints\"   # same as training\n",
+        "SAVE_DIR  = \"/content/drive/MyDrive/3dunet_medsam2_drive/data_split_json/msd_task01\" # Save to Google Drive\n",
         "SPLIT_JSON_PATH = os.path.join(SAVE_DIR, \"dataset_split.json\")\n",
         "\n",
         "# where to save predicted segmentations and CSV\n",
@@ -224,8 +226,8 @@
         "OVERLAP     = 0.75\n",
         "\n",
         "# which checkpoint to use\n",
-        "CKPT_PATH = os.path.join(SAVE_DIR, \"last.pt\")\n",
-        "#CKPT_PATH = os.path.join(SAVE_DIR, \"best_epoch65_dice0.7330.pt\")\n",
+        "#CKPT_PATH = os.path.join(SAVE_DIR, \"last.pt\")\n",
+        "CKPT_PATH = os.path.join(SAVE_DIR, \"best_epoch65_dice0.7330.pt\")\n",
         "\n",
         "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "print(\"Using device:\", DEVICE)\n",
